fixing texts author display and metadata table display in standalones

--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -1024,6 +1024,15 @@
       .text-visibility-0 .text-val, .text-visibility-1 .group-val, .text-visibility-2 .group-val
         display: none
 
+  /* Adjustments for standalones */
+  body.mandala
+    #shanti-texts-sidebar
+      .shanti-texts-record-table ul
+        margin: 0
+      #shanti-texts-sidebar-tabs-tabpane-text_bibl
+        .shanti-texts-field-label
+          white-space: nowrap
+
   /* FROM COLLECTIONS PANEL */
 
   .shanti-collection-page
