--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -61,7 +61,7 @@
 }
 .sui-advHeader .badge {
     padding: 0.65rem 3.75rem 0.65rem 1.25rem;
-    border-radius: 1rem 1rem 0 1rem;
+    border-radius: 1rem 0.2rem 0.2rem 1rem;
     color: #fff;
     cursor: default;
     line-height: 1.45;
