--- a/kmaps-app/src/views/Kmaps/kmaps_shared.scss
+++ b/kmaps-app/src/views/Kmaps/kmaps_shared.scss
@@ -33,6 +33,10 @@
 
 /* Styles from mandala texts for embedded texts */
 
+.c-kmaps-related-text h2.byline {
+    display: block;
+}
+
 .shanti-texts-section-title {
     margin: 1rem 0;
     font-weight: 500;
