--- a/kmaps-app/src/views/Kmaps/kmaps_shared.scss
+++ b/kmaps-app/src/views/Kmaps/kmaps_shared.scss
@@ -32,9 +32,21 @@
 }
 
 /* Styles from mandala texts for embedded texts */
+.c-content__main__kmaps {
+    .c-kmaps-related-text {
+        .shanti-texts-section-title.text-level-1 {
+            display: none;
+        }
 
-.c-kmaps-related-text h2.byline {
-    display: block;
+        & > h1 {
+            font-size: 2.65rem;
+        }
+        h2.byline {
+            display: block;
+            font-size: 1.75rem;
+            font-style: italic;
+        }
+    }
 }
 
 .shanti-texts-section-title {
