--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -149,7 +149,7 @@
     color: #668eec;
 }
 .sui-advTerm {
-    font-size: 1.35rem;
+    font-size: 1.15rem;
     padding: 0.2rem 0.5rem 0.3rem 0;
     margin: 0 0.5rem 0.2rem 0.6rem;
     text-transform: capitalize;
@@ -370,7 +370,7 @@
     background-color: transparent !important;
 }
 .sui-advEditLine.chosen {
-    border-right: 0.3rem solid #6b77ea !important;
+    /* border-right: 0.3rem solid #6b77ea !important; */
     border-radius: 0.5rem 0 0 0.5rem;
     font-weight: bold;
     color: $color-amber;
@@ -379,7 +379,7 @@
     color: #555;
 }
 .sui-advEditLine.chosen::after {
-    content: '';
+    /*  content: '';
     display: inline-block;
     width: 1rem;
     height: 1rem;
@@ -388,7 +388,7 @@
     background-color: #6b77ea;
     position: absolute;
     right: 0.75rem;
-    top: 0.75rem;
+    top: 0.75rem; */
 }
 .sui-advEdit-facet-ctrls {
     margin-bottom: 0.5rem;
