--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -198,11 +198,11 @@
     color: #333;
     background-color: #fafafa;
     text-align: left;
-    border-width: 0.3rem 0.4rem 0.3rem 0.1rem;
+    border-width: 0.3rem 0.45rem 0.4rem 0.1rem;
     border-style: solid;
     border-color: #6b77ea;
     /* border-radius: 0.5rem 0.5rem 1.5rem 1.5rem; */
-    border-radius: 1rem 0 1rem 1rem;
+    border-radius: 1.5rem 0.25rem 1rem 0.5rem;
     overflow: auto !important;
     box-shadow: inset -1rem -2rem 1.5rem #c9ccd82b;
     transition: max-height 0.65s, border 0.25s, margin 0.25s;
@@ -378,8 +378,10 @@
 .sui-advEditLine.chosen:hover {
     color: #555;
 }
+
+/*
 .sui-advEditLine.chosen::after {
-    /*  content: '';
+    content: '';
     display: inline-block;
     width: 1rem;
     height: 1rem;
@@ -388,8 +390,10 @@
     background-color: #6b77ea;
     position: absolute;
     right: 0.75rem;
-    top: 0.75rem; */
+    top: 0.75rem;
 }
+ */
+
 .sui-advEdit-facet-ctrls {
     margin-bottom: 0.5rem;
 }
