Right sidebar search filter label font style update

--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -34,9 +34,9 @@
     text-transform: capitalize;
 }
 .sui-advHeader {
-    text-transform: capitalize;
+    text-transform: uppercase;
     display: flex;
-    font-size: 1.65rem;
+    font-size: 1.5rem;
     height: 3.5rem;
     padding-top: 1.2rem;
     margin-bottom: 0.8rem;
