Update top site searchbox position and filter label font style

--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -41,10 +41,10 @@
     padding-top: 1.2rem;
     margin-bottom: 0.8rem;
     cursor: default !important;
+    letter-spacing: 0.0125rem;
 }
 .sui-advBox:hover,
 .sui-advHeader:hover {
-    color: #000;
     cursor: default;
 }
 
