Right sidebar minor style updates

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -809,6 +809,7 @@ header.terms + .two-columns {
         text-transform: uppercase;
         font-weight: 600;
         font-size: 1.55rem;
+        line-height: 2.5rem !important;
         color: #333;
         letter-spacing: 0.075rem;
         margin: 0.5rem 0.5rem 0 0;
