--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -197,7 +197,7 @@
 }
 .sui-advEdit {
     color: #333;
-    background-color: #fafafa;
+    background-color: #fcfcfc;
     text-align: left;
     border-width: 0.3rem 0.45rem 0.4rem 0.1rem;
     border-style: solid;
