--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -311,7 +311,7 @@ header.terms + .two-columns {
             margin-bottom: 1rem;
         }
         .c-buttonGroup__viewMode {
-            top: 1.5rem;
+            top: 1.25rem;
             right: 1.5rem;
         }
     }
@@ -1149,18 +1149,19 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         border-color: #cde3f7;
         border-width: 0.1rem 0 0;
         background-color: #fff;
-        margin-left: 4rem !important;
+        margin-left: 0.75rem !important;
     }
     .u-icon__plus:before {
         color: $color-amber;
         opacity: 0.4;
         display: inline-block;
-        margin-right: 0;
-        margin-left: -4.8rem;
-        padding: 0 1.5rem;
-        font-size: 1.3rem;
+        margin-right: 0.5rem;
+        margin-left: -1.5rem;
+        padding: 0;
+        font-size: 1.6rem;
         position: relative;
-        /*top: 0.35rem;*/
+        top: 0.1rem;
+
         &:hover {
             opacity: 0.8;
         }
@@ -1200,12 +1201,11 @@ header.terms + .two-columns .c-view__wrapper.gallery {
     }
 
     .card .type.icon {
-        font-size: 1.5rem;
+        font-size: 1.75rem;
         padding: 0.54rem;
         border-radius: 0.5rem;
         margin-right: 0.25rem;
         background-color: #fff;
-        /*border: 0.1rem solid #fff;*/
 
         &.shanticon-audio-video {
             color: $color-audio-video;
@@ -1265,7 +1265,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
     .card-body {
         max-height: unset;
         min-height: 3rem;
-        font-size: 1.25rem;
+        font-size: 1.75rem;
         /*  min-width: 40vw;*/
         background-color: #fff;
         overflow: visible;
@@ -1273,6 +1273,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         .shanticon-audio-video::before {
             position: relative;
             left: 0.1rem;
+            top: 0.2rem;
             padding: 0;
         }
         .icon {
@@ -1280,6 +1281,8 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         }
         .icon::before {
             padding-right: 0 !important;
+            top: 0.15rem;
+            position: relative;
         }
         .icon.u-icon__collections::before {
             font-size: 1.35rem;
