Update right sidebar Filter tab label color

--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -93,7 +93,7 @@
 }
 .sui-advHeader > .app-name {
     flex: 1;
-    color: #222;
+    color: #18238f;
     font-weight: bold;
 }
 .sui-advBox-recent .c-HistoryViewer {
