--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -94,7 +94,7 @@
 .sui-advHeader > .app-name {
     flex: 1;
     color: #18238f;
-    font-weight: bold;
+    font-weight: 600;
 }
 .sui-advBox-recent .c-HistoryViewer {
     font-size: 1.25rem;
