Set max-width on left related-column

--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -4,6 +4,7 @@
 .l-column__related {
     height: 100%;
     min-width: 16rem;
+    max-width: 24rem;
     margin: 0 1rem 2rem -23rem;
     padding: 0;
     transition: margin, 0.3s;
