--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -53,7 +53,7 @@
     font-size: 2.45rem;
     position: relative;
     top: -0.8rem;
-    left: 0.2rem;
+    left: 0;
     color: #4d59ca !important;
 }
 .sui-advHeader > .icon > .icon::before {
