--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -73,6 +73,9 @@ ul.fancytree-container {
         background-color: slategray;
         color: #ededed;
 
+        .button.close {
+            padding: 0;
+        }
         .modal-title.h4 {
             font-size: 2rem;
             font-weight: bold;
