--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -806,12 +806,6 @@ header.terms + .two-columns {
     }
     /* RESET Filters */
     .search-column-reset-filters {
-        text-transform: uppercase;
-        font-weight: 600;
-        font-size: 1.55rem;
-        line-height: 2.5rem !important;
-        color: #333;
-        letter-spacing: 0.075rem;
         margin: 0.5rem 0.5rem 0 0;
         padding: 0;
         display: flex;
@@ -819,20 +813,18 @@ header.terms + .two-columns {
 
         button {
             font-size: 1.2rem;
-            font-weight: bold;
+            font-weight: 600;
+            line-height: 2;
             letter-spacing: 0.075rem;
             margin: 0 0.35rem;
             padding: 0 1.75rem;
-            border: 1px solid #ddd;
-            border-radius: 1.8rem;
             background-color: #a27f1c;
             color: #fff;
             border: 4px double #fff;
+            border-radius: 1.8rem;
             opacity: 0.9;
             transition: all 0.2s;
             text-transform: uppercase;
-            height: 3.25rem;
-            line-height: 1.5rem;
             transform: scale(1);
 
             &:hover {
@@ -844,24 +836,6 @@ header.terms + .two-columns {
                 border: 4px double #fff;
                 transform: scale(0.98);
             }
-        }
-
-        .back-to-results {
-            font-size: 1.2rem;
-            text-transform: uppercase;
-            color: #fff;
-            background-color: #3f49b1;
-            text-align: left;
-            padding: 0 1.75rem 0 1.25rem;
-            border: 4px double #fff;
-            cursor: pointer !important;
-            line-height: 1.8rem;
-            &:hover {
-            }
-            &:active {
-                .header-icon .icon {
-                }
-            }
             .header-icon .icon {
                 font-size: 1.3rem;
                 color: #fff;
@@ -869,6 +843,11 @@ header.terms + .two-columns {
                 position: relative;
                 bottom: -0.1rem;
             }
+        }
+
+        .back-to-results {
+            background-color: #4d59ca;
+            padding: 0.15rem 1.75rem 0.15rem 1.25rem;
         }
     }
 }
