--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -431,7 +431,7 @@
     display: inline-block;
     margin-left: 0.2rem;
     position: absolute;
-    right: -2.1rem;
+    left: 0.5rem;
     bottom: 0.25rem;
     font-size: 1.65rem;
     color: #91693c;
@@ -489,7 +489,6 @@ color: #a4baec;
 .sui-boolItem {
     border: none;
     color: #4d59ca;
-    padding: 0.15rem 0.6rem 0.25rem 0.6rem;
     margin: 0 0.25rem;
     border: none;
 }
