--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -396,8 +396,8 @@
     margin: 0 0 2rem
     min-width: 40rem
     // width: 60%
-    // max-width: 85rem
-    max-width: 98.75% !important
+    max-width: 80rem !important
+    // max-width: 98.75% !important
     height: calc(100vh - 12rem)
     background-color: white
     box-shadow: inset 0 -0.2rem 5px #ddd
