Search column selected filters panel

--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -161,7 +161,7 @@
     border-left: 0.1rem solid #6b77ea;
     border-right: 0.4rem solid #6b77ea;
     border-top: 0.3rem solid #6b77ea;
-    border-radius: 1rem 0 0 1rem;
+    border-radius: 0.2rem 0.2rem 0.2rem 1rem;
     overflow: hidden;
 }
 .sui-advTerm:empty {
