--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -811,7 +811,8 @@ header.terms + .two-columns {
         display: flex;
         justify-content: center;
 
-        button {
+        button,
+        .back-to-results {
             font-size: 1.2rem;
             font-weight: 600;
             line-height: 2;
