--- a/kmaps-app/src/views/Sources/sources.scss
+++ b/kmaps-app/src/views/Sources/sources.scss
@@ -4,7 +4,7 @@ main.l-column__main.sources {
 
 .c-source {
     min-height: 65rem;
-    margin: 1rem auto;
+    margin: 0 auto 1rem;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 0.6rem;
