Style minor adjustments

--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -39,7 +39,7 @@
     background-color: transparent;
     font-size: 1.45rem;
     padding: 0;
-    margin: 0.325rem 0 0.25rem 3rem;
+    margin: 0.325rem 0 0.25rem 0;
 }
 
 .c-content__header__breadcrumb,
