--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -257,7 +257,7 @@ div.image-wrapper.center figcaption {
 }
 .l-content__main {
     display: flex;
-    padding: 0 1.25rem 0 1rem;
+    padding: 1rem 1.25rem 0 1rem;
     min-height: calc(100vh - 12rem);
 }
 .l-site__wrap > *,
