--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -37,11 +37,23 @@
     }
 
     .lv-2 {
-        margin-left: 4rem;
+        margin-left: 3rem;
     }
 
     .lv-3 {
         margin-left: 6rem;
+    }
+
+    .lv-4 {
+        margin-left: 8rem;
+    }
+
+    .lv-5 {
+        margin-left: 10rem;
+    }
+
+    .lv-6 {
+        margin-left: 12rem;
     }
 }
 
