Updating FeatureKmapListItem to use header based on view settings

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1234,6 +1234,9 @@ header.terms + .two-columns .c-view__wrapper.gallery {
                 display: inline-block;
                 margin-left: 0.5rem;
             }
+            span.bo {
+                font-weight: normal;
+            }
         }
     }
 
