--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -309,6 +309,7 @@
 }
 
 .shanti-field-itemcount,
+.shanti-field-linktype,
 .shanti-field-path,
 .shanti-field-type,
 .shanti-field-author,
@@ -327,6 +328,10 @@
     line-height: 1.3;
 }
 
+.shanti-field-linktype .shanti-field-content {
+    color: #333;
+}
+
 .shanti-field-caption {
     line-height: 1.3;
     margin-bottom: 1.5rem;
@@ -341,6 +346,7 @@
 }
 
 .shanti-field-itemcount span::before,
+.shanti-field-linktype span::before,
 .shanti-field-path span::before,
 .shanti-field-type span::before,
 .shanti-field-author > span::before,
