--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -351,6 +351,7 @@
     position: relative
 
   .meta-toggle-col
+    position: absolute
     margin-top: -0.7rem
     max-width: 0
     padding: 0.75rem 0 0 0
@@ -396,7 +397,7 @@
     margin: 0 0 2rem
     min-width: 40rem
     // width: 60%
-    max-width: 80rem !important
+    max-width: 100vw !important
     // max-width: 98.75% !important
     height: calc(100vh - 12rem)
     background-color: white
@@ -474,6 +475,16 @@
 
       a
         border-bottom-color: #cccaf3
+        &.sdfootnotesym
+          margin-right: 0.4rem
+          border-bottom: none
+          vertical-align: super
+          &:hover
+            text-decoration: underline
+        &.sdfootnoteanc
+          border-bottom: none
+          &:hover
+            text-decoration: underline
 
     img
       display: block
