--- a/kmaps-app/src/views/Collections/collections.scss
+++ b/kmaps-app/src/views/Collections/collections.scss
@@ -102,9 +102,8 @@
     /* width: 26rem; */
     .l-related__list__wrap.c-coll-toc {
         ul {
-            margin-left: 1.5rem;
+            margin-left: 0;
             padding-left: 1.5rem;
-            text-indent: -1.5rem;
         }
 
         li {
