--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -119,7 +119,7 @@
             width: 5rem;
             margin: auto 0;
             padding-left: 1rem;
-            cursor: default;
+            /*cursor: default;*/
 
             span {
                 display: block;
@@ -225,7 +225,7 @@
                 text-align: center;
                 margin: 3rem 3rem 0;
                 max-width: 18rem;
-                cursor: default;
+                /*cursor: default;*/
 
                 span {
                     font-size: 1.4rem;
