--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1139,7 +1139,7 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
 .react-photo-gallery--gallery,
 .react-photo-gallery--gallery div,
 .react-photo-gallery--gallery img {
-    cursor: default !important;
+    /*cursor: default !important;*/
 }
 
 header.terms + .two-columns .c-view__wrapper.gallery {
