updating slider and place images to show image captions based on shanti image id

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -508,6 +508,7 @@ header.terms + .two-columns {
     }
     .nodeHeader-summary {
         margin-right: 0;
+        margin-left: 1rem;
         padding-top: 0;
     }
     .featureTypes {
