adding a html entity decoding function to utils and using it for Feature Card captions

--- a/kmaps-app/src/views/css/ImageSlider.css
+++ b/kmaps-app/src/views/css/ImageSlider.css
@@ -50,6 +50,7 @@
     line-height: 18px;
     text-transform: capitalize;
     font-style: italic;
+    font-size: 90%;
 }
 .imageslider .captions .caption.active,
 .img.featured .caption.active {
