--- a/kmaps-app/src/views/css/ImageSlider.scss
+++ b/kmaps-app/src/views/css/ImageSlider.scss
@@ -53,6 +53,7 @@ $ssheight: 181px;
     line-height: 18px;
     text-transform: capitalize;
     font-style: italic;
+    font-size: 90%;
     &.active {
         display: block;
     }
