--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -123,3 +123,34 @@
 .shanti-texts-section-kmaps {
     display: none;
 }
+
+#places-map-container.map {
+    #places-map-error {
+        display: none;
+    }
+}
+
+#places-map-container #places-map-error {
+    width: 100%;
+    height: 80vh;
+    background-color: lightgray;
+    color: red;
+    font-weight: bold;
+    padding-top: 5%;
+    text-align: center;
+}
+
+#places-map-container #places-map-div {
+    width: 100%;
+    height: 80vh;
+    backgroundcolor: #cccccc;
+}
+
+#places-map-container.nomap {
+    #places-map-error {
+        display: block;
+    }
+    #places-map-div {
+        display: none;
+    }
+}
