--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -1,5 +1,12 @@
 @import '../../index-variables';
 
+button.mdl-login {
+    border: none;
+    background: transparent;
+    padding: 0 1.5rem 0.5rem 0;
+    font-size: 20px;
+}
+
 .c-MainSearchToggle--group {
     .c-MainSearchToggle--button {
         background-color: #fff;
