--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -458,6 +458,11 @@
     margin: 0 0.25rem;
     border: none;
 }
+.sui-boolItem.active {
+    background-color: #4d59ca;
+    color: #fff;
+    padding: 0 0.4rem;
+}
 .sui-advEditBool {
     position: relative;
     top: -0.15rem;
