updating login link for react app

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1628,3 +1628,11 @@ span.refdate {
     padding-top: 3rem;
     background-color: #555;
 }
+
+.mndl-login {
+    * {
+        font-size: 1.5rem;
+        color: #aaa;
+        border: none;
+    }
+}
