styling loggin button

--- a/kmaps-app/src/index.css
+++ b/kmaps-app/src/index.css
@@ -12353,10 +12353,18 @@ span.refdate::after {
     background-color: #555;
 }
 
-.mndl-login * {
-    font-size: 1.5rem;
-    color: #aaa;
+.mndl-access.logout * {
+    color: green;
+    font-size: 1.75rem;
     border: none;
+}
+.mndl-access.login * {
+    font-size: 1.5rem;
+    border: none;
+    margin-top: -0.2rem;
+}
+.mndl-access.login .btn {
+    background-color: #3f49b1;
 }
 
 /*# sourceMappingURL=index.css.map */
