updating styling for RIS link in sources records

--- a/kmaps-app/src/views/Sources/sources.scss
+++ b/kmaps-app/src/views/Sources/sources.scss
@@ -12,6 +12,27 @@ main.l-column__main.sources {
     font-weight: 400;
     color: #000;
 
+    a,
+    a:not([href]) {
+        border: none;
+        color: #2e399c;
+        &:hover {
+            border-bottom: thin solid #2e399c50;
+        }
+    }
+
+    .ris_link {
+        margin-top: 1rem;
+    }
+
+    .u-icon__ris {
+        content: url('/img/icons/ris-icon.svg');
+        color: green;
+        display: inline-block;
+        width: 3rem;
+        margin-right: 0.5rem;
+    }
+
     .c-source__head {
         padding-bottom: 1rem;
         border-bottom: 0.1rem solid #ccc;
