--- a/kmaps-app/src/views/Sources/sources.css
+++ b/kmaps-app/src/views/Sources/sources.css
@@ -12,6 +12,25 @@ main.l-column__main.sources {
     font-weight: 400;
     color: #000;
 }
+.c-source a,
+.c-source a:not([href]) {
+    border: none;
+    color: #2e399c;
+}
+.c-source a:hover,
+.c-source a:not([href]):hover {
+    border-bottom: thin solid #2e399c50;
+}
+.c-source .ris_link {
+    margin-top: 1rem;
+}
+.c-source .u-icon__ris {
+    content: url('/img/icons/ris-icon.svg');
+    color: green;
+    display: inline-block;
+    width: 3rem;
+    margin-right: 0.5rem;
+}
 .c-source .c-source__head {
     padding-bottom: 1rem;
     border-bottom: 0.1rem solid #ccc;
