updating display of descriptions in visuals

--- a/kmaps-app/src/views/Visuals/visuals.scss
+++ b/kmaps-app/src/views/Visuals/visuals.scss
@@ -44,6 +44,10 @@
 
         .u-value.kmapval {
             margin-top: -1rem;
+
+            .kmap-tag-group {
+                font-style: normal;
+            }
         }
 
         .row.visdesc .u-label {
