--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -38,15 +38,14 @@
     font-weight: 400;
     font-style: italic;
     font-size: 1.75rem;
-    margin-left: -0.75;
+    margin-left: -0.75rem;
 }
 .sui-termDicts__dict-name span {
     margin-left: 0.25rem;
 }
 ul.sui-termDicts__dict-wrapper {
     margin-top: 0.7rem;
-    margin-bottom: 2.4rem;
-    border-bottom: 1px solid #ccc;
+    margin-bottom: 1rem;
     list-style: none;
     padding-inline-start: 20px;
 }
@@ -54,10 +53,17 @@ ul.sui-termDicts__dict-wrapper {
     text-align: right;
     color: #91693e;
     margin-top: 0;
-    margin-bottom: 0.75rem;
+    margin-bottom: 1.75rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #ccc;
     font-size: 1.1rem;
     font-weight: bold;
 }
+
+.sui-termDicts__dict-extra:last-child {
+    border-bottom: none;
+}
+
 .sui-termDicts__dict-extra-lang {
     text-transform: uppercase;
 }
@@ -80,6 +86,11 @@ dt {
 dt a {
     font-weight: normal;
 }
+
 dd {
-    width: 50%;
+    width: 80%;
+}
+
+dd span a {
+    white-space: nowrap;
 }
