--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -154,3 +154,29 @@
         display: none;
     }
 }
+
+#place-kmap-tabs-tabpane-related {
+    .rel-place-feature h4 {
+        color: #2b455d;
+        font-weight: bold;
+        width: 100%;
+        text-align: center;
+    }
+    .c-relplaces-list div.scroll-list {
+        padding-top: 0.5rem;
+        max-height: 450px;
+        overflow-y: scroll;
+        border: 4px double #3297f7;
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.5);
+        -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+    }
+}
