--- a/kmaps-app/src/views/Terms/TermsInfo.scss
+++ b/kmaps-app/src/views/Terms/TermsInfo.scss
@@ -78,7 +78,7 @@
     }
 }
 
-.otherdef-passages,
+.passage-group,
 .otherdef-notes {
     padding: 1.25rem 2rem 2rem 2.5rem;
     background: white;
@@ -86,7 +86,7 @@
     margin-left: 0;
     min-height: 10rem;
 }
-.otherdef-passages {
+.passage-group {
     .passage-src,
     .passage-note-author {
         width: 100%;
