--- a/kmaps-app/src/views/KmapTree/KmapTree.css
+++ b/kmaps-app/src/views/KmapTree/KmapTree.css
@@ -158,6 +158,10 @@ ul.fancytree-container {
     transform: rotate(45deg);
 }
 
+.l-place-content-tree .leafend .toggle-icon::before {
+    top: 0.85rem;
+}
+
 .leafend:hover .toggle-icon::before {
     background-color: #b99b45;
 }
